Add possibility to fill the same scored sells

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CompetitionTable</string>
+    <string name="toast_messaage">Недопустимое значение</string>
 </resources>
